@@ -1,6 +1,10 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          rename ClearPrereqs to RemovePrereqs
+
+          the Zilla assembler no longer provides a default zilla_class
+          (because doing so had lost any meaning)
 
 4.101800  2010-06-29 10:29:38 America/New_York
           during dist minting, ModuleMaker occurs before FileGatherer
